--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "typescript-boilerplate-2021",
-  "version": "0.4.2",
-  "description": "Boilerplate for TypeScript projects (Node.js and browser modules)",
-  "author": "Chris Hager <chris@linuxuser.at>",
-  "repository": "https://github.com/metachris/typescript-boilerplate",
-  "license": "MIT",
-  "keywords": [
-    "typescript",
-    "boilerplate",
-    "esbuild"
-  ],
+  "name": "@grayarrow/core-utils",
+  "description": "Core helper utilities for supporting TypeScript and JavaScript projects.",
+  "private": false,
   "main": "./dist/tsc/main.js",
   "types": "./dist/tsc/main.d.ts",
   "browser": "./dist/esbuild/browser.js",
@@ -32,17 +24,43 @@
     "esbuild-node:dev": "esbuild src/cli.ts --bundle --platform=node --sourcemap=external --outfile=dist/esbuild/cli.js",
     "esbuild-node:watch": "esbuild src/cli.ts --bundle --platform=node --watch --sourcemap=external --outfile=dist/esbuild/cli.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/grayarrow/core-utils.git"
+  },
+  "author": "David Dietrich",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/grayarrow/core-utils/issues"
+  },
+  "homepage": "https://github.com/grayarrow/core-utils#readme",
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@types/crypto-js": "^4.1.1",
+    "@types/jest": "^29.2.3",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
     "esbuild": "^0.14.38",
-    "eslint": "^8.14.0",
-    "jest": "27.0.0",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-no-for-of-loops": "^1.0.1",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
+    "jest": "^29.4.2",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.22.15",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.3"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
+  },
+  "dependencies": {
+    "axios": "^1.3.2",
+    "crypto-js": "^4.1.1"
   }
 }
