--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     ]
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "__tests__/**/*.test.ts"
   ],
   "exclude": [
     "node_modules",
